# DEZoomcamp-homework

./: .gitignore  pyproject.toml
module-1/: homework.md  ingest_data.ipynb  link.md
module-2/: FAQ.md  docker-compose.yaml  homework.md  link.md
module-2/flows/: 04_postgres_taxi.yaml
module-3/: dataload.ipynb  fhv_fixed.ipynb  green_fixed_dataload.ipynb  homework.md  link.md  load_fhv.py  load_green_yellow_with_schema.py  load_yellow_taxi_data.py  web_to_gcs.py  yellow_fixed_dataload.ipynb
module-4/: homework.md  link.md
module-4/setup/: cloud_setup.md
module-4/taxi_rides_ny/: dbt_project.yml
module-4/taxi_rides_ny/macros/: get_payment_type_description.sql
module-4/taxi_rides_ny/models/core/: dim_fhv_trips.sql
module-4/taxi_rides_ny/models/staging/: fct_fhv_monthly_zone_traveltime_p90.sql  fct_taxi_trips_monthly_fare_p95.sql  fct_taxi_trips_quarterly_revenue.sql  schema.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
module-5/: homework.md  link.md  module-5-homework.ipynb  pyspark.md
module-6/: homework.md  load_kafka_to_postgres.py
module-6/pyflink/src/job/: session_job.py  test_read.py
module-6/pyflink/src/producers/: load_taxi_data.ipynb  producer.ipynb  producer.py
